fix popup footer displaying. AG-35939
Merge in EXTENSIONS/browser-extension from fix/AG-35939 to v5.0

Squashed commit of the following:

commit f201a1fa920db1511693b0749c8fb3a00dff4ecb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Sep 13 00:53:13 2024 +0300

    fix popup footer displaying

--- a/Extension/src/pages/popup/components/Actions/actions.pcss
+++ b/Extension/src/pages/popup/components/Actions/actions.pcss
@@ -2,7 +2,6 @@
     border: 0;
     min-height: 120px;
     width: 100%;
-    padding: 8px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
