--- a/Extension/src/pages/popup/components/Footer/footer.pcss
+++ b/Extension/src/pages/popup/components/Footer/footer.pcss
@@ -7,6 +7,7 @@
     font-size: 14px;
     line-height: 18px;
     background-color: var(--fills-backgrounds-page-background-additional-default);
+    border-top: 1px solid var(--fills-backgrounds-page-background-default);
 
     &__text {
         max-width: 280px;
