--- a/Extension/src/pages/popup/components/Tabs/tabs.pcss
+++ b/Extension/src/pages/popup/components/Tabs/tabs.pcss
@@ -9,6 +9,8 @@
         min-height: 176px;
         overflow: auto;
         scrollbar-width: thin;
+        display: flex;
+        align-items: center;
 
         &--stats {
             max-height: 176px;
